Fix social links to open in new page on template

--- a/colour-theory.html
+++ b/colour-theory.html
@@ -175,9 +175,9 @@
         </div>
 
         <div class="nav col-md-2 justify-content-between">
-          <a href="https://www.pinterest.ie/"><i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i></a>
-          <a href="https://www.facebook.com/"><i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i></a>
-          <a href="https://www.instagram.com/"><i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.pinterest.ie/" target="_blank" rel="noopener noreferral"><i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferral"><i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferral"><i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i></a>
           <a href="mailto: lisa@designled.io"><i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i></a>
         </div>
       </footer>
