--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
          <!-- SUB HEADER SECTION -->
     <div class="container-fluid text-center">
       <div">
-<h3> The website that tells you everything you need to know about colour, and how to use it in your home.  
+<h3> The website that tells you everything you need to know about colour, and how to use it in your home  
 </h3>
-
+<br>
 <!-- COMING SOON SECTION -->
 
 <div class="container-fluid coming-soon">
