Change all images to .webp files

--- a/Neutral.html
+++ b/Neutral.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.png" alt="" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.webp" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -80,7 +80,7 @@
     </div>
   </nav>
 </div>
-<img src="assets/site-images/Line.png" alt="" height="2px" width="100%">
+<img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
 </div>
 
     <div class="container-fluid">
@@ -98,7 +98,7 @@
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_room.webp">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_palette.png">
+        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_palette.webp">
       </div>
 </div>
 
