--- a/colour-theory.html
+++ b/colour-theory.html
@@ -5,23 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/e9ea849082.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/e9ea849082.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <!-- Google Fonts -->
+<!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,93 +25,63 @@
     <link rel="stylesheet" href="assets/CSS/styles.css" />
 
     <title>Colour Theory</title>
-    <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
   </head>
 
   <body>
-    <!-- Nav bar section-->
-    <div class="container-fluid">
-      <div class="navbar-fixed-top">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <div class="d-flex flex-grow-1">
-            <span class="w-100 d-lg-none d-block"
-              ><!-- hidden spacer to center brand on mobile --></span
-            >
-            <a class="navbar-brand d-none d-inline-block" href="#">
-              <img
-                src="assets/site-images/Logo.png"
-                alt=""
-                width=""
-                height="125px"
-                alt=""
-              />
-            </a>
-            <div class="w-100 text-right">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#myNavbar"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-          </div>
-          <div
-            class="menu collapse navbar-collapse flex-grow-1 text-right"
-            id="myNavbar"
-          >
-            <ul class="navbar-nav ml-auto flex-nowrap">
-              <li class="nav-item">
-                <a href="index.html" class="nav-link m-2 menu-item">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="colour-theory.html" class="nav-link m-2 menu-item"
-                  >What is Colour Theory?</a
-                >
-              </li>
-
-              <!-- Dropdown menu section -->
-              <li class="nav-item dropdown">
-                <a
-                  href="#"
-                  class="nav-link dropdown-toggle m-2 menu-item"
-                  id="navbarDropdown"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Palettes
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a class="dropdown-item" href="Neutral.html">Neutral</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="Monochromatic.html"
-                      >Monochromatic</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="Maximalist.html"
-                      >Maximalist</a
-                    >
-                  </li>
-                </ul>
-              </li>
-
-              <li class="nav-item">
-                <a href="contact.html" class="nav-link m-2 menu-item"
-                  >Contact</a
-                >
-              </li>
-            </ul>
-          </div>
-        </nav>
+    
+  <!-- Nav bar section-->
+<div class="container-fluid">
+<div class="navbar-fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="d-flex flex-grow-1">
+      <span class="w-100 d-lg-none d-block"
+        ><!-- hidden spacer to center brand on mobile --></span
+      >
+      <a class="navbar-brand d-none d-inline-block" href="#">
+        <img src="assets/site-images/Logo.webp" alt="" width="" height="125px" alt="" />
+      </a>
+      <div class="w-100 text-right">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#myNavbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
       </div>
-      <img src="assets/site-images/Line.png" alt="" height="2px" width="100%" />
     </div>
+    <div class="menu collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
+      <ul class="navbar-nav ml-auto flex-nowrap">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link m-2 menu-item">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
+        </li>
 
+        <!-- Dropdown menu section -->
+        <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            Palettes
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="Neutral.html">Neutral</a></li>
+            <li><a class="dropdown-item" href="Monochromatic.html">Monochromatic</a></li>
+            <li><a class="dropdown-item" href="Maximalist.html">Maximalist</a></li>
+          </ul>
+        </li>
+        
+        <li class="nav-item">
+          <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
+<img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
+</div>
     <!-- TITLE SECTION  -->
 
     <div class="container-fluid text-center">
