--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.png" alt="" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.webp" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -80,7 +80,7 @@
     </div>
   </nav>
 </div>
-<img src="assets/site-images/Line.png" alt="" height="2px" width="100%">
+<img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
 </div>
 
 
