--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.png" alt="" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.webp" alt="" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -80,7 +80,7 @@
     </div>
   </nav>
 </div>
-<img src="assets/site-images/Line.png" alt="" height="2px" width="100%">
+<img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
 </div>
 
 
@@ -95,13 +95,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="assets/site-images/Carousel_image_1.png" alt="First slide">
+              <img class="d-block w-100" src="assets/site-images/Carousel_image_1.webp" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/site-images/Carousel_image_2.png" alt="Second slide">
+              <img class="d-block w-100" src="assets/site-images/Carousel_image_2.webp" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/site-images/Carousel_image_3.png" alt="Third slide">
+              <img class="d-block w-100" src="assets/site-images/Carousel_image_3.webp" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
