Make carousel images smaller on home page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
     <title>Colour Theory</title>
     <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
+
+    Cache-control
   </head>
 
   <body>
