Add alt attributes to all images

--- a/Maximalist.html
+++ b/Maximalist.html
@@ -95,10 +95,10 @@
     </div>
     <div class="row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/maximalist_room.webp">
+        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/maximalist_room.webp" alt="maximalist room">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/maximalist_palette.webp">
+        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/maximalist_palette.webp" alt="maximalist colour palette">
       </div>
 </div>
 
