--- a/Monochromatic.html
+++ b/Monochromatic.html
@@ -99,10 +99,10 @@
     </div>
     <div class="row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/monochromatic_room.webp">
+        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/monochromatic_room.webp" alt="monochromatic room">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/monochromatic_room.webp">
+        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/monochromatic_room.webp" alt="monochromatic colour palette">
       </div>
 </div>
 
