--- a/Neutral.html
+++ b/Neutral.html
@@ -95,10 +95,10 @@
     </div>
     <div class="row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_room.webp">
+        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_room.webp" alt="Neutral Room">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_palette.webp">
+        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_palette.webp" alt="neutral colour palette">
       </div>
 </div>
 
