--- a/colour-theory.html
+++ b/colour-theory.html
@@ -108,7 +108,7 @@
       <img
       class="colour-wheel"
       src="assets/site-images/COLOUR WHEEL.webp"
-      alt=""
+      alt="colour wheel"
       width=""
       height="500em"
     />
@@ -122,6 +122,7 @@
           <img
             class="thumbnail img-responsive"
             src="assets/site-images/COLOURS/Yellow.webp"
+            alt="yellow gradient colours"
           />
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -156,6 +157,7 @@
           <img
             class="thumbnail img-responsive"
             src="assets/site-images/COLOURS/Orange.webp"
+            alt="orange gradient colours"
           />
         </div>
       </div>
@@ -165,6 +167,7 @@
           <img
             class="thumbnail img-responsive"
             src="assets/site-images/COLOURS/Red.webp"
+            alt="red gradient colours"
           />
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -198,6 +201,7 @@
           <img
             class="thumbnail img-responsive"
             src="assets/site-images/COLOURS/Pink.webp"
+            alt="pink gradient colours"
           />
         </div>
       </div>
@@ -207,6 +211,7 @@
           <img
             class="thumbnail img-responsive"
             src="assets/site-images/COLOURS/Purple.webp"
+            alt="purple gradient colours"
           />
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -238,6 +243,7 @@
           <img
             class="thumbnail img-responsive"
             src="assets/site-images/COLOURS/Blue.webp"
+            alt="blue gradient colours"
           />
         </div>
       </div>
@@ -247,6 +253,7 @@
           <img
             class="thumbnail img-responsive"
             src="assets/site-images/COLOURS/Green.webp"
+            alt="green gradient colours"
           />
         </div>
         <div class="col-xs-12 col-sm-6">
