--- a/colour-theory.html
+++ b/colour-theory.html
@@ -26,13 +26,13 @@
 
     <title>Colour Theory</title>
     <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
+
   </head>
 
   <body>
     
   <!-- Nav bar section-->
-<div class="container-fluid">
-<div class="navbar-fixed-top">
+<div class=" container-fluid navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="d-flex flex-grow-1">
       <span class="w-100 d-lg-none d-block"
@@ -80,8 +80,8 @@
     </div>
   </nav>
 </div>
-<img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
-</div>
+
+
     <!-- TITLE SECTION  -->
 
     <div class="container-fluid text-center">
@@ -273,8 +273,9 @@
     <!-- Footer Section -->
 
     <div class="container-fluid">
+      <img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
       <footer
-        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
       >
         <div class="col-md-4 d-flex align-items-center">
           <a
