--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
     <title>Colour Theory</title>
     <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
 
-    Cache-control
   </head>
 
   <body>
     
   <!-- Nav bar section-->
-<div class="container-fluid">
-<div class="navbar-fixed-top">
+<div class=" container-fluid navbar-fixed-top">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="d-flex flex-grow-1">
       <span class="w-100 d-lg-none d-block"
@@ -81,8 +79,6 @@
       </ul>
     </div>
   </nav>
-</div>
-<img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
 </div>
 
 
@@ -132,23 +128,61 @@
 
    <!-- Footer Section -->
 
-   <div class="container-fluid" >
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+   <div class="container-fluid">
+    <img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
+    <footer
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
+    >
       <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        <a
+          href="/"
+          class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+        >
+          <svg class="bi" width="30" height="24">
+            <use xlink:href="#bootstrap"></use>
+          </svg>
         </a>
-        <span class="mb-3 mb-md-0 text-body-secondary">© 2023 DesignLed Ltd</span>
+        <span class="mb-3 mb-md-0 text-body-secondary"
+          >© 2023 DesignLed Ltd</span
+        >
       </div>
 
       <div class="nav col-md-2 justify-content-between">
-        <a href="https://www.pinterest.ie/"><i class="social-icons fa-brands fa-pinterest fa-2x" aria-hidden="true"></i></a>
-        <a href="https://www.facebook.com/"><i class="social-icons fa-brands fa-facebook-f fa-2x" aria-hidden="true"></i></a>
-        <a href="https://www.instagram.com/"><i class="social-icons fa-brands fa-instagram fa-2x" aria-hidden="true"></i></a>
-        <a href="mailto: lisa@designled.io"><i class="social-icons fa-solid fa-envelope fa-2x" aria-hidden="true"></i></a>
+        <a
+          href="https://www.pinterest.ie/"
+          target="_blank"
+          rel="noopener noreferral"
+          ><i
+            class="social-icons fa-brands fa-pinterest fa-2x"
+            aria-hidden="true"
+          ></i
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          target="_blank"
+          rel="noopener noreferral"
+          ><i
+            class="social-icons fa-brands fa-facebook-f fa-2x"
+            aria-hidden="true"
+          ></i
+        ></a>
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          rel="noopener noreferral"
+          ><i
+            class="social-icons fa-brands fa-instagram fa-2x"
+            aria-hidden="true"
+          ></i
+        ></a>
+        <a href="mailto: lisa@designled.io"
+          ><i
+            class="social-icons fa-solid fa-envelope fa-2x"
+            aria-hidden="true"
+          ></i
+        ></a>
       </div>
     </footer>
   </div>
-
 </body>
 </html>
