Fix formatting on home page
*Make p text larger
*Add icons to banner

--- a/index.html
+++ b/index.html
@@ -121,9 +121,19 @@
 <!-- COMING SOON SECTION -->
 
 <div class="container-fluid coming-soon">
-<h3> COMING SOON</h3>
+<div class="row row-no-margin">
+  <div class="col-xs-12 col-sm-4 col-no-padding">
+    <i class="fa-solid fa-house fa-6x" style="color: #ffffff;"></i>
+  </div>
+  <div class="col-xs-12 col-sm-4 col-no-padding">
+    <h3> COMING SOON</h3>
 <h4>Find your Colour Personality Quiz</h4>
 <p>Find the colours you need in your home so you can start creating your dream spaces.</p>
+  </div>
+  <div class="col-xs-12 col-sm-4 col-no-padding">
+    <i class="fa-solid fa-house fa-6x" style="color: #ffffff;"></i>
+  </div>
+</div>
 </div>
 
    <!-- Footer Section -->
