Update font size of paragraph sections

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <div class="col-xs-12 col-sm-4 col-no-padding">
     <h3> COMING SOON</h3>
 <h4>Find your Colour Personality Quiz</h4>
-<p>Find the colours you need in your home so you can start creating your dream spaces.</p>
+<p class="coming-soon-text">Find the colours you need in your home so you can start creating your dream spaces.</p>
   </div>
   <div class="col-xs-12 col-sm-4 col-no-padding">
     <i class="fa-solid fa-house fa-6x" style="color: #ffffff;"></i>
