Fix formatting on Colour Theory Page

--- a/colour-theory.html
+++ b/colour-theory.html
@@ -86,8 +86,10 @@
 
     <div class="container-fluid text-center">
       <h2 class="palette-title">COLOUR THEORY</h2>
+      </div>
 
-      <p>
+      <div>
+      <p class="colour-psych-text">
         Colour psychology in interior design is well worth paying attention to.
         It can set the mood for how your guests feel when they come to visit you
         and how you feel every time you come home. You can literally use
@@ -105,13 +107,10 @@
         black room is another person's idea of hell. So it's important to find
         the colours that work for you.
       </p>
-      <img
-      class="colour-wheel"
-      src="assets/site-images/COLOUR WHEEL.webp"
-      alt="colour wheel"
-      width=""
-      height="500em"
-    />
+    </div>
+
+    <div class="colour-theory-line">
+      <img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
     </div>
 
     <!-- Colour sections -->
@@ -140,6 +139,13 @@
 
       <div class="colours row row-no-margin">
         <div class="col-xs-12 col-sm-6">
+          <img
+            class="thumbnail img-responsive"
+            src="assets/site-images/COLOURS/Orange.webp"
+            alt="orange gradient colours"
+          />
+        </div>
+        <div class="col-xs-12 col-sm-6">
           <p>
             Whilst orange isn't a millions miles away from yellow, it's a less
             popular colour but one that has no less positive connotations. It is
@@ -153,13 +159,7 @@
             cushion can bring this beautiful, positive colour into your home.
           </p>
         </div>
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Orange.webp"
-            alt="orange gradient colours"
-          />
-        </div>
+      
       </div>
 
       <div class="colours row row-no-margin">
@@ -185,6 +185,14 @@
 
       <div class="colours row row-no-margin">
         <div class="col-xs-12 col-sm-6">
+          <img
+            class="thumbnail img-responsive"
+            src="assets/site-images/COLOURS/Pink.webp"
+            alt="pink gradient colours"
+          />
+        </div>
+
+        <div class="col-xs-12 col-sm-6">
           <p>
             Pink is no longer the domain of little girl's bedrooms. With its
             resurgence in popularity in recent years, all the major paint brands
@@ -196,13 +204,6 @@
             pieces. A staircase painted in a dark, moody pink in an otherwise
             neutral hallway would make a fantastic statement.
           </p>
-        </div>
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Pink.webp"
-            alt="pink gradient colours"
-          />
         </div>
       </div>
 
@@ -229,6 +230,13 @@
 
       <div class="colours row row-no-margin">
         <div class="col-xs-12 col-sm-6">
+          <img
+            class="thumbnail img-responsive"
+            src="assets/site-images/COLOURS/Blue.webp"
+            alt="blue gradient colours"
+          />
+        </div>
+        <div class="col-xs-12 col-sm-6">
           <p>
             Blue is one of the most versatile colours on the colour wheel. It
             can be used from everywhere from the bedroom to the living room to
@@ -238,13 +246,6 @@
             so popular in kitchens in recent times gives a room an edge whilst
             still allowing it to feel grounded.
           </p>
-        </div>
-        <div class="col-xs-12 col-sm-6">
-          <img
-            class="thumbnail img-responsive"
-            src="assets/site-images/COLOURS/Blue.webp"
-            alt="blue gradient colours"
-          />
         </div>
       </div>
 
