Fix formatting on palette pages

--- a/Maximalist.html
+++ b/Maximalist.html
@@ -81,6 +81,7 @@
   </nav>
 </div>
 
+<!-- Hero Images section  -->
 
     <div class="container-fluid">
 
@@ -92,7 +93,8 @@
        This is the colour scheme for the people who like to be bold with their homes.  It's about putting bold colours up against each other, even clashing. 
       </p>
     </div>
-    <div class="row row-no-margin">
+
+    <div class="hero-images row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/maximalist_room.webp" alt="maximalist room">
       </div>
@@ -100,6 +102,8 @@
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/maximalist_palette.webp" alt="maximalist colour palette">
       </div>
 </div>
+
+<!-- How To section  -->
 
 <div class="container-fluid">
   <h3>
