--- a/Monochromatic.html
+++ b/Monochromatic.html
@@ -81,6 +81,7 @@
   </nav>
 </div>
 
+<!-- Hero Images section  -->
 
     <div class="container-fluid">
 
@@ -96,7 +97,7 @@
         very naturally into the next.
       </p>
     </div>
-    <div class="row-no-margin">
+    <div class="hero-images row row-no-margin">
       <div class="col-xs-12 col-sm-6">
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/monochromatic_room.webp" alt="monochromatic room">
       </div>
@@ -104,6 +105,8 @@
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/Monochromatic.webp" alt="monochromatic colour palette">
       </div>
 </div>
+
+<!-- How To section  -->
 
 <div class="container-fluid">
   <h3>
