--- a/Neutral.html
+++ b/Neutral.html
@@ -81,25 +81,30 @@
   </nav>
 </div>
 
+<!-- Hero Images section  -->
 
     <div class="container-fluid">
 
       <h2 class="palette-title">
         Neutral Colour Palette
       </h2>
-      
+
       <p class="palette-title">
         For those of you that prefer a more pared back look, that doesn't mean your spaces need to be dull.  There are more than 150,000 shades of white paint in the world that you can choose from.  You need to take just as much care choosing your neutrals as you do your bolder colours.  
       </p>
     </div>
-    <div class="row row-no-margin">
+
+    <div class="hero-images row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_room.webp" alt="Neutral Room">
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
         <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_palette.webp" alt="neutral colour palette">
       </div>
-</div>
+    </div>
+
+
+<!-- How To section  -->
 
 <div class="container-fluid">
   <h3>
