Update favicon link throughout website

--- a/Contact-form-submit.html
+++ b/Contact-form-submit.html
@@ -25,8 +25,7 @@
     <link rel="stylesheet" href="assets/CSS/styles.css" />
 
     <title>Colour Theory</title>
-    <link rel="icon" type="image/x-icon" href="/IMAGES/favicon.ico">
-
+    <link rel="icon" type="image/x-icon" href="assets/site-images/favicon.ico">
   </head>
 
   <body>
