Change hover colour in navbar

--- a/Neutral.html
+++ b/Neutral.html
@@ -106,7 +106,7 @@
 
 <!-- How To section  -->
 
-<div class="container-fluid">
+<div class="container-fluid how-to">
   <h3>
 How to create a neutral colour scheme:  </h3>
 
