Fix how to sections on palette pages
*Finalise colour
*Fix max width on container
*Add margins
*Change writing to white

--- a/Maximalist.html
+++ b/Maximalist.html
@@ -105,7 +105,7 @@
 
 <!-- How To section  -->
 
-<div class="container-fluid">
+<div class="container-fluid how-to">
   <h3>
 How to create a maximalist colour scheme:  </h3>
 
