--- a/Monochromatic.html
+++ b/Monochromatic.html
@@ -108,7 +108,7 @@
 
 <!-- How To section  -->
 
-<div class="container-fluid">
+<div class="container-fluid how-to">
   <h3>
 How to create a monochromatic colour scheme:  </h3>
 
