Create contact form submission page
*Import fontawesome icon
*Create text
*Set up automatic redirect after 10 seconds to home page

--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
 
           <li>
             <i class="fas fa-envelope mt-4 fa-2x"></i>
-            <p>contact@colourtheory.com</p>
+            <p>hello@designled.io</p>
           </li>
         </ul>
       </div>
