Fix accessibility issues in Navbar and Footer *Add alt text to brand *Add aria labels to social icons and copyright label

--- a/Neutral.html
+++ b/Neutral.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -63,7 +63,7 @@
 
         <!-- Dropdown menu section -->
         <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
             Palettes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -80,6 +80,7 @@
     </div>
   </nav>
 </div>
+
 
 <!-- Hero Images section  -->
 
