--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="" height="125px" alt="" />
       </a>
       <div class="w-100 text-right">
         <button
@@ -63,7 +63,7 @@
 
         <!-- Dropdown menu section -->
         <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
             Palettes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -80,6 +80,7 @@
     </div>
   </nav>
 </div>
+
 
 
     <!-- HEADER SECTION -->
@@ -149,8 +150,9 @@
           class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
         >
           <svg class="bi" width="30" height="24">
-            <use xlink:href="#bootstrap"></use>
+            <use xlink:href="#bootstrap" aria-label="DesignLed copyright"></use>
           </svg>
+
         </a>
         <span class="mb-3 mb-md-0 text-body-secondary"
           >© 2023 DesignLed Ltd</span
@@ -162,6 +164,7 @@
           href="https://www.pinterest.ie/"
           target="_blank"
           rel="noopener noreferral"
+          aria-label="Pinterest"
           ><i
             class="social-icons fa-brands fa-pinterest fa-2x"
             aria-hidden="true"
@@ -171,6 +174,7 @@
           href="https://www.facebook.com/"
           target="_blank"
           rel="noopener noreferral"
+          aria-label="Facebook"
           ><i
             class="social-icons fa-brands fa-facebook-f fa-2x"
             aria-hidden="true"
@@ -180,12 +184,14 @@
           href="https://www.instagram.com/"
           target="_blank"
           rel="noopener noreferral"
+          aria-label="Instagram"
           ><i
             class="social-icons fa-brands fa-instagram fa-2x"
             aria-hidden="true"
           ></i
         ></a>
-        <a href="mailto: lisa@designled.io"
+        <a href="mailto: hello@designled.io"
+        aria-label="email to hello@designled.io"
           ><i
             class="social-icons fa-solid fa-envelope fa-2x"
             aria-hidden="true"
