Add value to button in collapsible navbar menu

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           type="button"
           data-toggle="collapse"
           data-target="#myNavbar"
+          aria-label="Collapsible menu"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
