--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="assets/site-images/Carousel_image_1.webp" alt="First slide">
+              <img class="d-block w-100" src="assets/site-images/Carousel_image_1.webp" alt="First slide showing modern room with dark walls and contrasting modern furniture">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/site-images/Carousel_image_2.webp" alt="Second slide">
+              <img class="d-block w-100" src="assets/site-images/Carousel_image_2.webp" alt="Second slide showing colourful room with pastels and pink patterned wallpaper">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/site-images/Carousel_image_3.webp" alt="Third slide">
+              <img class="d-block w-100" src="assets/site-images/Carousel_image_3.webp" alt="Third slide showing room with contrasting patterns and bright colours">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -109,7 +109,7 @@
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" aria-hidden="false"></span>
             <span class="sr-only">Next</span>
           </a>
         </div>
