Add aria-hidden false to icons in coming soon session

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <div class="container-fluid coming-soon">
 <div class="row row-no-margin">
   <div class="col-xs-12 col-sm-4 col-no-padding">
-    <i class="fa-solid fa-house fa-6x" style="color: #ffffff;"></i>
+    <i class="fa-solid fa-house fa-6x" aria-hidden="false" style="color: #ffffff;"></i>
   </div>
   <div class="col-xs-12 col-sm-4 col-no-padding">
     <h3> COMING SOON</h3>
@@ -133,7 +133,7 @@
 <p class="coming-soon-text">Find the colours you need in your home so you can start creating your dream spaces.</p>
   </div>
   <div class="col-xs-12 col-sm-4 col-no-padding">
-    <i class="fa-solid fa-house fa-6x" style="color: #ffffff;"></i>
+    <i class="fa-solid fa-house fa-6x" aria-hidden="false" style="color: #ffffff;"></i>
   </div>
 </div>
 </div>
