Fix empy link on DesignLed copyright in footer

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           ></i
         ></a>
         <a href="mailto: hello@designled.io"
-        aria-label="email to hello@designled.io"
+        aria-label="email"
           ><i
             class="social-icons fa-solid fa-envelope fa-2x"
             aria-hidden="true"
