--- a/Monochromatic.html
+++ b/Monochromatic.html
@@ -47,6 +47,7 @@
           type="button"
           data-toggle="collapse"
           data-target="#myNavbar"
+          aria-label="Collapsible menu"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -80,6 +81,8 @@
     </div>
   </nav>
 </div>
+
+
 
 <!-- Hero Images section  -->
 
@@ -134,8 +137,9 @@ How to create a monochromatic colour scheme:  </h3>
           class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
         >
           <svg class="bi" width="30" height="24">
-            <use xlink:href="#bootstrap"></use>
+            <use xlink:href="#bootstrap" aria-label="DesignLed copyright"></use>
           </svg>
+
         </a>
         <span class="mb-3 mb-md-0 text-body-secondary"
           >© 2023 DesignLed Ltd</span
@@ -147,6 +151,7 @@ How to create a monochromatic colour scheme:  </h3>
           href="https://www.pinterest.ie/"
           target="_blank"
           rel="noopener noreferral"
+          aria-label="Pinterest"
           ><i
             class="social-icons fa-brands fa-pinterest fa-2x"
             aria-hidden="true"
@@ -156,6 +161,7 @@ How to create a monochromatic colour scheme:  </h3>
           href="https://www.facebook.com/"
           target="_blank"
           rel="noopener noreferral"
+          aria-label="Facebook"
           ><i
             class="social-icons fa-brands fa-facebook-f fa-2x"
             aria-hidden="true"
@@ -165,12 +171,14 @@ How to create a monochromatic colour scheme:  </h3>
           href="https://www.instagram.com/"
           target="_blank"
           rel="noopener noreferral"
+          aria-label="Instagram"
           ><i
             class="social-icons fa-brands fa-instagram fa-2x"
             aria-hidden="true"
           ></i
         ></a>
-        <a href="mailto: lisa@designled.io"
+        <a href="mailto: hello@designled.io"
+        aria-label="email"
           ><i
             class="social-icons fa-solid fa-envelope fa-2x"
             aria-hidden="true"
