--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -47,6 +47,7 @@
           type="button"
           data-toggle="collapse"
           data-target="#myNavbar"
+          aria-label="Collapsible menu"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -82,69 +83,70 @@
 </div>
 
 
+
     
-    <!-- Footer Section -->
+  <!-- Footer Section -->
 
-    <div class="container-fluid">
-      <img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
-      <footer
-        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
-      >
-        <div class="col-md-4 d-flex align-items-center">
-          <a
-            href="/"
-            class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
-          >
-            <svg class="bi" width="30" height="24">
-              <use xlink:href="#bootstrap" aria-label="DesignLed copyright"></use>
-            </svg>
+  <div class="container-fluid">
+    <img src="assets/site-images/Line.webp" alt="" height="2px" width="100%">
+    <footer
+      class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
+    >
+      <div class="col-md-4 d-flex align-items-center">
+        <a
+          href="/"
+          class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+        >
+          <svg class="bi" width="30" height="24">
+            <use xlink:href="#bootstrap" aria-label="DesignLed copyright"></use>
+          </svg>
 
-          </a>
-          <span class="mb-3 mb-md-0 text-body-secondary"
-            >© 2023 DesignLed Ltd</span
-          >
-        </div>
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary"
+          >© 2023 DesignLed Ltd</span
+        >
+      </div>
 
-        <div class="nav col-md-2 justify-content-between">
-          <a
-            href="https://www.pinterest.ie/"
-            target="_blank"
-            rel="noopener noreferral"
-            aria-label="Pinterest"
-            ><i
-              class="social-icons fa-brands fa-pinterest fa-2x"
-              aria-hidden="true"
-            ></i
-          ></a>
-          <a
-            href="https://www.facebook.com/"
-            target="_blank"
-            rel="noopener noreferral"
-            aria-label="Facebook"
-            ><i
-              class="social-icons fa-brands fa-facebook-f fa-2x"
-              aria-hidden="true"
-            ></i
-          ></a>
-          <a
-            href="https://www.instagram.com/"
-            target="_blank"
-            rel="noopener noreferral"
-            aria-label="Instagram"
-            ><i
-              class="social-icons fa-brands fa-instagram fa-2x"
-              aria-hidden="true"
-            ></i
-          ></a>
-          <a href="mailto: hello@designled.io"
-          aria-label="email to hello@designled.io"
-            ><i
-              class="social-icons fa-solid fa-envelope fa-2x"
-              aria-hidden="true"
-            ></i
-          ></a>
-        </div>
-      </footer>
-    </div>
-  </body>
+      <div class="nav col-md-2 justify-content-between">
+        <a
+          href="https://www.pinterest.ie/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="Pinterest"
+          ><i
+            class="social-icons fa-brands fa-pinterest fa-2x"
+            aria-hidden="true"
+          ></i
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="Facebook"
+          ><i
+            class="social-icons fa-brands fa-facebook-f fa-2x"
+            aria-hidden="true"
+          ></i
+        ></a>
+        <a
+          href="https://www.instagram.com/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="Instagram"
+          ><i
+            class="social-icons fa-brands fa-instagram fa-2x"
+            aria-hidden="true"
+          ></i
+        ></a>
+        <a href="mailto: hello@designled.io"
+        aria-label="email"
+          ><i
+            class="social-icons fa-solid fa-envelope fa-2x"
+            aria-hidden="true"
+          ></i
+        ></a>
+      </div>
+    </footer>
+  </div>
+</body>
 </html>
