Fix formatting issue with social icons found when testing responsiveness

--- a/TEMPLATE.html
+++ b/TEMPLATE.html
@@ -107,7 +107,7 @@
         >
       </div>
 
-      <div class="nav col-md-2 justify-content-between">
+      <div class="social-group nav col-md-2 justify-content-between">
         <a
           href="https://www.pinterest.ie/"
           target="_blank"
