--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="125px" height="125px"/>
       </a>
       <div class="w-100 text-right">
         <button
@@ -95,7 +95,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="assets/site-images/Carousel_image_1.webp" alt="First slide showing modern room with dark walls and contrasting modern furniture">
+              <img class="d-block w-100" src="assets/site-images/Carousel_image_4.webp" alt="A georgian living room with brightly coloured furniture and accessories">
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="assets/site-images/Carousel_image_2.webp" alt="Second slide showing colourful room with pastels and pink patterned wallpaper">
@@ -117,8 +117,8 @@
          <!-- SUB HEADER SECTION -->
     <div class="container-fluid text-center">
       <div">
-<h3> The website that tells you everything you need to know about colour, and how to use it in your home  
-</h3>
+<p class="sub-header"> The website that tells you everything you need to know about colour, and how to use it in your home  
+</p>
 <br>
 <!-- COMING SOON SECTION -->
 
