Remove all trailing slashes after html checker

--- a/404-page.html
+++ b/404-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/e9ea849082.js" crossorigin="anonymous"></script>
@@ -16,13 +16,13 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/CSS/styles.css" />
+    >
+    <link rel="stylesheet" href="assets/CSS/styles.css">
 
     <title>Colour Theory</title>
     <link rel="icon" type="image/x-icon" href="assets/site-images/favicon.ico">
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="" height="125px" alt="" />
+        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="" height="125px" alt="">
       </a>
       <div class="w-100 text-right">
         <button
@@ -81,7 +81,6 @@
     </div>
   </nav>
 </div>
-
 
 
 <!-- 404 section  -->
