Fix html errors in navbar following html checked *Fix errors with width & height formatting on brand *Add space on line 56 *Remove duplicate alts

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         ><!-- hidden spacer to center brand on mobile --></span
       >
       <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="" height="125px" alt="">
+        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" style="width:125px;">
       </a>
       <div class="w-100 text-right">
         <button
@@ -53,7 +53,7 @@
         </button>
       </div>
     </div>
-    <div class="menu collapse navbar-collapse flex-grow-1 text-right"id="myNavbar">
+    <div class="menu collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
       <ul class="navbar-nav ml-auto flex-nowrap">
         <li class="nav-item">
           <a href="index.html" class="nav-link m-2 menu-item">Home</a>
@@ -81,7 +81,6 @@
     </div>
   </nav>
 </div>
-
 
     <!-- HEADER SECTION -->
     <div class="container-fluid text-center">
