Fix unclosed elements and other fixes in index.html page following html validator

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 </div>
 
     <!-- HEADER SECTION -->
-    <div class="container-fluid text-center">
-        <div class="main-title">
+    <div class="container-fluid text-center main-title">
 <h1> HOW TO USE COLOUR IN YOUR HOME </h1>
         </div>
 
@@ -114,16 +113,17 @@
 
          <!-- SUB HEADER SECTION -->
     <div class="container-fluid text-center">
-      <div">
+   
 <p class="sub-header"> The website that tells you everything you need to know about colour, and how to use it in your home  
 </p>
-<br>
+</div>
+
 <!-- COMING SOON SECTION -->
 
 <div class="container-fluid coming-soon">
 <div class="row row-no-margin">
   <div class="col-xs-12 col-sm-4 col-no-padding">
-    <i class="fa-solid fa-house fa-6x" style="color: #ffffff;" aria-label="house icon"></i>
+    <i class="fa-solid fa-house fa-6x" style="color: #ffffff;"></i>
   </div>
   <div class="col-xs-12 col-sm-4 col-no-padding">
     <h3> COMING SOON</h3>
@@ -131,7 +131,7 @@
 <p class="coming-soon-text">Find the colours you need in your home so you can start creating your dream spaces.</p>
   </div>
   <div class="col-xs-12 col-sm-4 col-no-padding">
-    <i class="fa-solid fa-house fa-6x" style="color: #ffffff;" aria-label="house icon"></i>
+    <i class="fa-solid fa-house fa-6x" style="color: #ffffff;"></i>
   </div>
 </div>
 </div>
